Creating an interface for MediaController
Created the Celebrity Tag page

--- a/apps/admin/views/layouts/main.twig
+++ b/apps/admin/views/layouts/main.twig
@@ -31,7 +31,7 @@
                         <a href="/storylist" class="active"><i class="fa fa-list fa-fw"></i> Story List</a>
                     </li>
                     <li>
-                        <a href="/media" class="active"><i class="fa fa-camera fa-fw"></i> Media</a>
+                        <a href="/celebritytags" class="active"><i class="fa fa-tags fa-fw"></i> Celebrity Tags</a>
                     </li>
                     <li>
                         <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> Manage Users</a>
