--- a/apps/admin/views/site/index.twig
+++ b/apps/admin/views/site/index.twig
@@ -89,24 +89,24 @@
 	</div>
     <!-- End Story List Block -->
 
-    <!-- Media Block -->
+    <!-- Celebrity Tags Block -->
 	<div class="col-lg-3">
         <div class="panel panel-info">
 	      	<div class="panel-heading">
 	        	<div class="row">
 	            	<div class="col-xs-6">
-	              	<i class="fa fa-camera fa-5x"></i>
+	              	<i class="fa fa-tags fa-5x"></i>
 	            	</div>
 	            	<div class="col-xs-6 text-right">
-	              	  	<p class="task-title">Media</p>
+	              	  	<p class="task-title">Celebrity Tags</p>
 	            	</div>
 	        	</div>
 	      	</div>
-	      	<a href="/media">
+	      	<a href="/celebritytags">
 	        	<div class="panel-footer announcement-bottom">
 	            	<div class="row">
 		              	<div class="col-xs-6">
-		               		Add Media
+		               		Add/Edit Tags
 		              	</div>
 		              	<div class="col-xs-6 text-right">
 		                	<i class="fa fa-arrow-circle-right"></i>
@@ -116,7 +116,7 @@
 	      	</a>
 	    </div>
 	</div>
-    <!-- End Media Block -->
+    <!-- End Celebrity Tags Block -->
 </div>
 <div class="row">
 	<!-- User Block -->
