--- a/apps/admin/views/storylist/image_fragment.twig
+++ b/apps/admin/views/storylist/image_fragment.twig
@@ -25,7 +25,7 @@
 		    	'class' : 'form-vertical',
 		    	'enctype' : 'multipart/form-data'
 		    },
-		    'action' : '/media/upload',
+		    'action' : '/image/upload',
 		    'enableAjaxValidation' : true,
 		    'ajaxParam' : 'ajax'
 		}) %}
