Created a tag edit tab on the story list page.

--- a/apps/admin/views/storylist/story_list.twig
+++ b/apps/admin/views/storylist/story_list.twig
@@ -36,7 +36,7 @@
 		          	<div id="story-tabs-{{entry.story_id}}" class="panel-body">
 		          		<ul>
 						    <li><a href="#edit-story-fragment-{{entry.story_id}}"><span>Edit Story</span></a></li>
-						    <li><a href="#edit-tags-fragment-{{entry.story_id}}"><span>Add/Edit Tags</span></a></li>
+						    <li><a href="#edit-tags-fragment-{{entry.story_id}}"><span>Select Tags</span></a></li>
 						    <li><a href="#edit-images-fragment-{{entry.story_id}}"><span>Upload/Edit Images</span></a></li>
 						</ul>
 		            	<div id="edit-story-fragment-{{entry.story_id}}" class="row">
