--- a/apps/admin/web/css/sb-admin-2.css
+++ b/apps/admin/web/css/sb-admin-2.css
@@ -18,6 +18,10 @@ body {
     background-color: #fff;
 }
 
+.cursor-pointer {
+    cursor: pointer !important;
+}
+
 @media(min-width:768px) {
     #page-wrapper {
         position: inherit;
