--- a/apps/admin/views/storylist/tag_fragment.twig
+++ b/apps/admin/views/storylist/tag_fragment.twig
@@ -1,38 +1,37 @@
 <!-- Tag Block -->
 <div class="row">
 	<div class="col-lg-6">
-		<div class="tag_assets" data-storyid="{{ entry.story_id }}">
-			{% if entry.tags %}
-				<label>Tag List:</label><br />
+		<div class="tag_assets">
+			{% if entry.existing_tag_list %}
+				<label>Existing Tag List:</label><br />
 				<div class="tag-list list-group">
-					{% for tag in entry.tags %}
-						<div data-storytagid="{{ tag.story_tag_id }}" class="list-group-item">
+					{% for tag in entry.existing_tag_list %}
+						<div class="list-group-item">
 							{{ tag.tag_name }}
-							<button class="close" type="button" data-storytagid="{{ tag.story_tag_id }}">×</button>
+							<button class="close" type="button" data-storytaglistid="{{ tag.story_tag_list_id }}">×</button>
 						</div>
 					{% endfor %}
 				</div>
 			{% else %}
-				<p align="center"><strong>There are no tags for this story.</strong></p>
+				<p align="center"><strong>There are no tags attached to this story.</strong></p>
 			{% endif%}
 		</div>
 	</div>
 	<div class="col-lg-6">
-		<div class="tag_assets" data-storyid="{{ entry.story_id }}">
-			{% if entry.tags %}
-				<label>Tag List:</label><br />
+		<div class="tag_assets">
+			{% if entry.available_tag_list %}
+				<label>Available Tag List:</label><br />
 				<div class="tag-list list-group">
-					{% for tag in entry.tags %}
-						<div data-storytagid="{{ tag.story_tag_id }}" class="list-group-item">
+					{% for tag in entry.available_tag_list %}
+						<div data-newstorytagid="{{ tag.story_tag_id }}" data-storyid="{{ entry.story_id }}" class="list-group-item cursor-pointer">
 							{{ tag.tag_name }}
-							<button class="close" type="button" data-storytagid="{{ tag.story_tag_id }}">×</button>
 						</div>
 					{% endfor %}
 				</div>
 			{% else %}
-				<p align="center"><strong>There are no tags for this story.</strong></p>
+				<p align="center"><strong>There are no tags available.</strong></p>
 			{% endif%}
 		</div>
 	</div>
 </div>
-<!-- End tag Block -->
+<!-- End Tag Block -->
