Perfecting the audio upload feature. Fixed the filter functionality.

--- a/apps/admin/views/storylist/story_list.twig
+++ b/apps/admin/views/storylist/story_list.twig
@@ -37,7 +37,8 @@
 		          		<ul>
 						    <li><a href="#edit-story-fragment-{{entry.story_id}}"><span>Edit Story</span></a></li>
 						    <li><a href="#edit-tags-fragment-{{entry.story_id}}"><span>Select Tags</span></a></li>
-						    <li><a href="#edit-images-fragment-{{entry.story_id}}"><span>Upload/Edit Images</span></a></li>
+						    <li><a href="#edit-images-fragment-{{entry.story_id}}"><span>Edit Images</span></a></li>
+						    <li><a href="#edit-audio-fragment-{{entry.story_id}}"><span>Edit Audio</span></a></li>
 						</ul>
 		            	<div id="edit-story-fragment-{{entry.story_id}}" class="row">
 		            		{% include "story_fragment.twig" %}
@@ -47,6 +48,9 @@
 						</div>
 						<div id="edit-images-fragment-{{entry.story_id}}" class="row">
 		            		{% include "image_fragment.twig" %}
+						</div>
+						<div id="edit-audio-fragment-{{entry.story_id}}" class="row">
+		            		{% include "audio_fragment.twig" %}
 						</div>
 		          	</div>
 		        </div>
