Fixing bugs, created Audio list page, commiting the media controllers and the changes to the staging server page (including media to each story on the page)

--- a/apps/admin/views/layouts/main.twig
+++ b/apps/admin/views/layouts/main.twig
@@ -34,6 +34,9 @@
                         <a href="/celebritytags" class="active"><i class="fa fa-tags fa-fw"></i> Celebrity Tags</a>
                     </li>
                     <li>
+                        <a href="/audio" class="active"><i class="fa fa-volume-up fa-fw"></i> Audio List</a>
+                    </li>
+                    <li>
                         <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> Manage Users</a>
                     </li>
                     <li>
