--- a/apps/admin/views/site/index.twig
+++ b/apps/admin/views/site/index.twig
@@ -119,7 +119,36 @@
     <!-- End Celebrity Tags Block -->
 </div>
 <div class="row">
-	<!-- User Block -->
+	<!-- Audio Block -->
+	<div class="col-lg-3">
+        <div class="panel panel-info">
+	      	<div class="panel-heading">
+	        	<div class="row">
+	            	<div class="col-xs-6">
+	              	<i class="fa fa-volume-up fa-5x"></i>
+	            	</div>
+	            	<div class="col-xs-6 text-right">
+	              	  	<p class="task-title">Audio List</p>
+	            	</div>
+	        	</div>
+	      	</div>
+	      	<a href="/audio">
+	        	<div class="panel-footer announcement-bottom">
+	            	<div class="row">
+		              	<div class="col-xs-6">
+		               		View Audio List
+		              	</div>
+		              	<div class="col-xs-6 text-right">
+		                	<i class="fa fa-arrow-circle-right"></i>
+		              	</div>
+	            	</div>
+	        	</div>
+	      	</a>
+	    </div>
+	</div>
+    <!-- End Audio Block -->
+
+    <!-- User Block -->
 	<div class="col-lg-3">
         <div class="panel panel-info">
 	      	<div class="panel-heading">
